build/hadra-build-tool/src/test/resources/net/hl/test/compiler/fail/testCompilerFail0004.hl
var h(3)=5;//error call constructor and initializer at the same time
String z("3")="4";